--- a/index.html
+++ b/index.html
@@ -164,29 +164,29 @@
       
       </div>
       </div>
-         <div style="height: 45VH; width: 90%;" class="container-fluid d-flex flex-row justify-content-around rounded border border-light align-items-center " id="about">
-            <div style="height: 30vh; width: 30%;" class="container-fluid  d-flex flex-column">
+         <div style="height: 45VH; width: 100%;" class="container-fluid bg-secondary d-flex flex-row justify-content-around align-items-center " id="about">
+            <div style="height: 30vh; width: 30%;" class="container-fluid  d-flex flex-column gap-3">
               <h2 class="text-white " id="ContactInformation">Contact Information</h2>
-              <a class="text-white text-decoration-none fs-5 p-2"
+              <a class="text-white text-decoration-none fs-5"
                   href="https://www.google.com/maps/search/?api=1&query=NO:2/21, Kalaivanar Street Oragadam, Ambattur, Chennai, Tamil Nadu 600053 "
                   target="_blank"><i class="fa-solid fa-location-dot p-2"></i> NO:2/21, Kalaivanar Street Oragadam, Ambattur,
                   Chennai, Tamil Nadu 600053</a>
-              <a class="text-white text-decoration-none p-2 fs-5" href="tel:+91894-608-7147" target="_blank"><i class="fa-solid fa-phone p-2"></i>+91
+              <a class="text-white text-decoration-none fs-5" href="tel:+91894-608-7147" target="_blank"><i class="fa-solid fa-phone p-2"></i>+91
                   8946087147</a>
-              <a class="text-white text-decoration-none p-2 fs-5" href="mailto:tamilnaresh62@gmail.com">
+              <a class="text-white text-decoration-none fs-5" href="mailto:tamilnaresh62@gmail.com">
                   <i
                       class="fa-regular fa-envelope p-2 " style="font-size: 20px;"></i>tamilnaresh62@gmail.com</a>
             </div>
 
 
-            <div style="height: 30vh; width: 30%;" class="container-fluid d-flex flex-column">
+            <div style="height: 30vh; width: 30%;" class="container-fluid d-flex flex-column gap-3">
               <h2 class="fs-3 text-white">Quick Links</h2>
-              <a class="text-white text-decoration-none fs-5 p-2" href="https://www.instagram.com/call__me__tamil/" target="_blank"> <i
+              <a class="text-white text-decoration-none fs-5 " href="https://www.instagram.com/call__me__tamil/" target="_blank"> <i
                 class="fa-brands fa-instagram p-2"></i>Instagram</a>
-        <a class="text-white text-decoration-none fs-5 p-2" href="#"> <i class="fa-brands fa-linkedin p-2"></i>Linkedin</a>
-        <a class="text-white text-decoration-none fs-5 p-2" href="https://www.facebook.com/MSDhoni" target="_blank"><i
+        <a class="text-white text-decoration-none fs-5" href="#"> <i class="fa-brands fa-linkedin p-2"></i>Linkedin</a>
+        <a class="text-white text-decoration-none fs-5 " href="https://www.facebook.com/MSDhoni" target="_blank"><i
                 class="fa-brands fa-facebook p-2"></i>Facebook</a>
-        <a class="text-white text-decoration-none fs-5 p-2" href="#"><i class="fa-brands fa-twitter p-2"></i>Twitter</a>
+        <a class="text-white text-decoration-none fs-5 " href="#"><i class="fa-brands fa-twitter p-2"></i>Twitter</a>
             </div>
 
             <div style="height: 30vh; width: 30%;" class="container-fluidx">
