--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </div>
   </div>
 
-  <div style="height: 200vh; width: 100%;" class="container-fluid d-flex flex-column">
+  <div style="height: 200vh; width: 100%;" class="container-fluid d-flex flex-column mt-3">
     <div style="height: 50vh; width: 100%;" class="container-fluid bg-dark d-flex flex-column">
       <div class="card d-flex flex-row-reverse justify-content-center align-items-center"
         style="width: 50%; height: 48vh;">
