--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body class="bg-dark">
   <nav style="width: 100%; z-index: 1;" class="navbar navbar-expand-lg navbar-light bg-dark position-sticky top-0 ">
     <div style="width: 100%;" class="container-fluid">
-      <a class="navbar-brand text-white fs-3 fw-bold" href="#">TESLA</a>
+      <a style="font-family: Updock", cursive;" class="navbar-brand text-white fs-3 " href="#">TESLA</a>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
